# prep.ai

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  081bb3d9fb50_add_evaluation_runs_table.py  23b60fe723b9_create_boards_and_sources_tables.py  a47b3bb0d6ff_add_study_pillars_tables.py  acd32ea2810e_add_chunks_table.py  c8a28bca2f5d_create_users_table.py
backend/app/: config.py  database.py  deps.py  main.py  security.py
backend/app/models/: __init__.py  board.py  chunk.py  evaluation.py  flashcard.py  quiz.py  source.py  tutor.py  user.py
backend/app/routers/: auth.py  boards.py  evaluation.py  flashcards.py  quiz.py  settings.py  sources.py  tutor.py
backend/app/schemas/: __init__.py  board.py  evaluation.py  flashcard.py  quiz.py  source.py  tutor.py  user.py
backend/app/services/: evaluation_service.py  flashcard_service.py  piston.py  quiz_service.py  rate_limiter.py  tutor_service.py  vectorstore.py
backend/app/services/agents/: __init__.py  baseline_rag.py  critic.py  gemini_client.py  rag_graph.py  reviewer.py  tutor_agent.py
backend/app/services/ingestion/: chunking.py  doc_agent.py  indexing.py  pdf_extract.py  pipeline.py
backend/eval/: eval_rag.py  eval_tokens.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  boards.ts  evaluation.ts  flashcards.ts  quiz.ts  settings.ts  sources.ts  tutor.ts
(+39 files in other folders)
