[project]
name = "prep-ai-backend"
version = "0.1.0"
description = "FastAPI backend for prep.ai active-learning platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.32",
    "alembic>=1.13.2",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.27.0",
    "bcrypt>=4.2.0",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.9",
    "llama-index>=0.11.0",
    "llama-index-llms-gemini>=0.2.0",
    "llama-index-embeddings-gemini>=0.2.0",
    "llama-index-vector-stores-qdrant>=0.2.0",
    "llama-index-readers-llama-parse>=0.1.0",
    "llama-index-readers-web>=0.1.0",
    "langgraph>=0.2.0",
    "google-genai>=0.1.1",
    "ragas>=0.1.15",
]
